# M-IFEval

./: .gitignore  README.md  colab_mifeval_run.ipynb  evaluation.sh  evaluation_main.py  get_responses.py  instructions_registry.py  main.py  nohup.out  pyproject.toml  requirements.txt  setup.sh
data/: en_input_response_data_CohereForAI__aya-23-8B.jsonl  en_input_response_data_Qwen__Qwen2.5-0.5B-Instruct-GPTQ-Int4.jsonl  en_input_response_data_Qwen__Qwen2.5-1.5B-Instruct-GPTQ-Int4.jsonl  en_input_response_data_Qwen__Qwen2.5-14B-Instruct-GPTQ-Int4.jsonl  en_input_response_data_Qwen__Qwen2.5-32B-Instruct-GPTQ-Int4.jsonl  en_input_response_data_Qwen__Qwen2.5-3B-Instruct-GPTQ-Int4.jsonl  en_input_response_data_Qwen__Qwen2.5-7B-Instruct-GPTQ-Int4.jsonl  en_input_response_data_claude-3-5-sonnet-20240620.jsonl  en_input_response_data_claude-3-haiku-20240307.jsonl  en_input_response_data_claude-3-opus-20240229.jsonl  en_input_response_data_deepseek-ai__deepseek-llm-7b-chat.jsonl  en_input_response_data_gpt-4o-2024-08-06.jsonl  en_input_response_data_gpt-4o-mini-2024-07-18.jsonl  en_input_response_data_hugging-quants__Meta-Llama-3.1-8B-Instruct-AWQ-INT4.jsonl  en_input_response_data_mistralai__Mistral-7B-Instruct-v0.3.jsonl  en_input_response_data_o1-mini-2024-09-12.jsonl  en_input_response_data_o1-preview-2024-09-12.jsonl  es_input_response_data_CohereForAI__aya-23-8B.jsonl  es_input_response_data_Qwen__Qwen2.5-0.5B-Instruct-GPTQ-Int4.jsonl  es_input_response_data_Qwen__Qwen2.5-1.5B-Instruct-GPTQ-Int4.jsonl  es_input_response_data_Qwen__Qwen2.5-14B-Instruct-GPTQ-Int4.jsonl  (+51 more)
(+8 files in other folders)
